# kindness

./: .gitignore  CREATE.md  README.md
.github/workflows/: generate.yml
analysis/: analyze.py  pyproject.toml
eval/: Cargo.toml
eval/src/: main.rs
prompts/templates/: bare_directive.md  personified.md  polite_directive.md  system.md
runner/: Cargo.toml
runner/src/: main.rs
tasks/definitions/: 1_01_fizzbuzz.toml  1_02_celsius_to_fahrenheit.toml  1_03_sum_array.toml  1_04_is_even.toml  1_05_max_element.toml  1_06_count_vowels.toml  1_07_factorial.toml  1_08_is_palindrome.toml  1_09_fibonacci.toml  1_10_reverse_string.toml  1_11_hamming_distance.toml  1_12_collatz_steps.toml  1_13_digit_sum.toml  1_14_rotate_array.toml  1_15_pangram_check.toml  2_01_valid_parentheses.toml  2_02_binary_search.toml  2_03_two_sum.toml  2_04_roman_to_integer.toml  2_05_anagram_check.toml  2_06_merge_sorted_arrays.toml  2_07_run_length_encoding.toml  2_08_gcd.toml  2_09_flatten_nested_vec.toml  2_10_title_case.toml  2_11_longest_common_prefix.toml  2_12_spiral_order.toml  2_13_valid_sudoku.toml  2_14_atoi.toml  2_15_zigzag_conversion.toml  3_01_lru_cache.toml  3_02_trie.toml  3_03_stack_with_min.toml  3_04_matrix_rotation.toml  3_05_calculator.toml  3_06_linked_list.toml  3_07_serialize_binary_tree.toml  3_08_top_k_frequent.toml  3_09_json_parser.toml  3_10_graph_bfs.toml  (+35 more)
tasks/solutions/1_01_fizzbuzz/src/: lib.rs
tasks/solutions/1_01_fizzbuzz/tests/: integration.rs
tasks/solutions/1_02_celsius_to_fahrenheit/src/: lib.rs
tasks/solutions/1_03_sum_array/src/: lib.rs
(+145 files in other folders)
